--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.ColorsActivity"></activity>
+        <activity android:name=".Activity.HistoryActivity"></activity>
+        <activity android:name=".Activity.SummaryActivity" />
+        <activity android:name=".Activity.ColorsActivity" />
         <activity android:name=".Activity.CricketerActivity" />
         <activity android:name=".Activity.HomepageActivity" />
         <activity
